--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.library'
+    id 'maven-publish'
 }
 
 group = 'com.github.knightfiury'  
@@ -11,8 +12,8 @@ android {
     useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 34
+        minSdk 16
+        targetSdk 34
         versionCode 1
         versionName "1.0"
     }
@@ -31,4 +32,13 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+}
+
+// JitPack publishing
+publishing {
+    publications {
+        release(MavenPublication) {
+            from components.release
+        }
+    }
 }
