--- a/BeforeAfterView/build.gradle
+++ b/BeforeAfterView/build.gradle
@@ -7,11 +7,10 @@ android {
     compileSdk 34
 
     defaultConfig {
-        applicationId "knightfiury.slidable" 
         minSdk 16
         targetSdk 34
         versionCode 1
-        versionName "1.0.6"  
+        versionName "1.0.6"
     }
 
     buildTypes {
@@ -25,9 +24,10 @@ android {
         viewBinding true
     }
 
+    // Compile with Java 8 but generate Java 7 bytecode
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7  
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_7
     }
 }
 
@@ -35,17 +35,17 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
 
-afterEvaluate {
-    publishing {
-        publications {
-            release(MavenPublication) {
+// Publishing setup for JitPack
+publishing {
+    publications {
+        release(MavenPublication) {
+            groupId = 'com.github.KnightFiury'
+            artifactId = 'BeforeAfterView'
+            version = '1.0.6'
+
+            afterEvaluate {
                 from components.release
-                groupId = 'com.github.KnightFiury'  
-                artifactId = 'BeforeAfterView'    
-                version = '1.0.6'                   
             }
         }
     }
 }
-
-
